tests/invalid_tests/array_initializer_size_not_int.minijava
class ArraySize {
    public static void main() {
        boolean b;
        b = true;
        int[] arr;
        arr = new int[b];
    }
}
